[package]
name = "rust_os"
version = "0.1.0"
authors = ["L Caraco <lbc.dna@gmail.com>"]
edition = "2018"

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2" # cpu architecture
uart_16550 = "0.2.0"
pic8259 = "0.10.1" # interupt controller
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.bootloader]
version = "0.9.8"
features = ["map_physical_memory"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
